配置优化
